[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-project"
version = "0.1.0"
description = "FastAPI project with LangChain"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "langchain",
    "openai",
    "uvicorn[standard]",
    "langchain-openai",
    "langchain-anthropic",
    "agno"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
